<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/search_bar"
    android:layout_width="match_parent"
    android:layout_height="?android:actionBarSize"
    android:padding="6dp"
    android:background="@color/white"
    android:layout_alignParentBottom="true"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="2">
        <Button
            style="?android:attr/borderlessButtonStyle"
            android:background="@drawable/btn_basic"
            android:id="@+id/btn_preview"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:enabled="false"
            android:text="@string/str_preview"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_warn"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <Button
            style="?android:attr/borderlessButtonStyle"
            android:background="@drawable/btn_basic"
            android:layout_gravity="right"
            android:id="@+id/btn_ok"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:text="@string/str_ok"
            android:enabled="false"/>
    </LinearLayout>

</LinearLayout>