<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">

    <RelativeLayout
        android:paddingTop="10dp"
        android:id="@+id/main_toobar"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:clipToPadding="true"
        android:fitsSystemWindows="true">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/leftbtn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:src="@mipmap/head"
            app:civ_border_color="#FF000000"
            app:civ_border_width="0dp"
            android:layout_alignBottom="@+id/textView"
            android:layout_alignParentLeft="true" />
        <LinearLayout
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:id="@+id/textView" />
            <TextView
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_send_title"
                android:textColor="@android:color/white"
                android:textSize="14sp" />
        </LinearLayout>
        <TextView
            android:id="@+id/tv_recent_file"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="#00000000"
            android:layout_marginRight="10dp"
            android:gravity="center_vertical"
            android:layout_alignBottom="@+id/textView"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:text="@string/str_recent_file"
            android:layout_alignParentRight="true"
            />
    </RelativeLayout>

    <ImageView
        android:layout_marginTop="100dp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@mipmap/main_icon"/>

    <LinearLayout
        android:padding="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="11">
        <TextView
            android:layout_margin="20dp"
            android:padding="10dp"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="@string/str_instruction"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <RelativeLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:gravity="bottom"
                android:layout_height="150dp"
                android:layout_gravity="center">

                <Button
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:text="@string/str_send"
                    android:textColor="@color/black"
                    android:id="@+id/btn_send"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:background="@drawable/btn_common"/>

                <Button
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:text="@string/str_receive"
                    android:textColor="@color/black"
                    android:id="@+id/btn_receive"
                    android:layout_centerVertical="true"
                    android:layout_alignLeft="@+id/btn_send"
                    android:layout_alignParentBottom="true"
                    android:background="@drawable/btn_common"/>

            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>