<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_search"
    android:layout_width="match_parent"
    android:layout_height="?android:actionBarSize"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_gravity="center_vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">


        <TextView
            android:layout_gravity="left"
            android:gravity="center"
            android:id="@+id/tv_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:padding="4dp"
            android:text="@string/str_mobile_file"
            android:textSize="16sp"
            android:textColor="@color/white" />
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <TextView
            android:gravity="center"
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_all_file"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/tv_little_title"
            android:gravity="center"
            android:textSize="14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:visibility="gone"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <ImageView
            android:layout_gravity="right"
            android:id="@+id/iv_search"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_margin="4dp"
            android:padding="4dp"
            android:src="@drawable/ic_search_black_24dp"
         />

    </LinearLayout>

</LinearLayout>