<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.pt.filetransfer.ui.ReceiverWaitingActivity">

    <include layout="@layout/layout_search_bar"/>

    <RelativeLayout
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ll_warn"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <ProgressBar
                android:id="@+id/pb_wait_receive"
                android:layout_width="20dp"
                android:layout_height="20dp" />

            <TextView
                android:layout_marginLeft="10dp"
                android:id="@+id/tv_receive_warn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_wait_des1"/>
        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginBottom="30dp"
            android:layout_above="@id/ll_warn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_other_side"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@mipmap/head"
                app:civ_border_color="#FF000000"
                app:civ_border_width="0dp"
                android:visibility="gone"
                />

            <TextView
                android:layout_marginTop="5dp"
                android:id="@+id/tv_ssid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_ssid"
                android:visibility="gone"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_open_wifi"
            android:layout_marginTop="20dp"
            android:layout_below="@id/ll_warn"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:visibility="gone"
            android:text="@string/str_open_wifi"/>

        <LinearLayout
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <LinearLayout
                android:gravity="center"
                android:orientation="horizontal"
                android:id="@+id/btn_search_sender"
                android:background="@drawable/btn_left"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginRight="10dp"
                    android:src="@mipmap/icon_search"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_search_approach"/>
            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:orientation="horizontal"
                android:id="@+id/btn_qrcode_scan"
                android:background="@drawable/btn_right"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginRight="10dp"
                    android:src="@mipmap/icon_scan"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_qrcode_receive"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
